style the messages upon successful deletion

--- a/css/admin.css
+++ b/css/admin.css
@@ -71,6 +71,13 @@ font-weight: bold;
     background-color: #ff2757;
 }
 
+.success {
+    color: #2ed573;
+}
+.error {
+    color: #ff4757;
+}
+
 
 /* CSS for the Menu*/
 
