--- a/css/admin.css
+++ b/css/admin.css
@@ -120,3 +120,13 @@ font-weight: bold;
     background-color: #ff4757;
     color: white;
 }
+
+/* CSS for login */
+
+.login {
+    border: 1px solid grey;
+    width: 20%;
+    margin: 10% auto; 
+    padding: 2%;
+    
+}
